--- a/about.html
+++ b/about.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PPT Summary Maker</title>
+    <title>About Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <style>
         body {
             background-color: #E5E5EE;
         }
-
+        .content{
+            margin-top: 10vh;
+        }
         /* Frosted Glass Effect for Navbar */
         .navbar-blur {
             background: rgba(255, 255, 255, 0.1); /* Slight transparency */
@@ -68,30 +70,28 @@
             </div>
         </div>
     </nav>
-
-
-    <div class="container">
+    <div class="container-fluid content">
         <div class="row">
-            <div class="col-lg-6 d-flex justify-content-start align-items-center min-vh-100">
-                <span><h1 style="font-size: 3rem;">Upload, Summarize,<br>Present – It’s That Easy!</h1>
-                <p>No more spending hours summarizing documents—our AI quickly analyzes and converts your content into presentation-ready slides.</p>
-                <div class="btn btn-outline-primary">
-                    Upload File
-                </div>
-            </span>
+            <div class="col-lg-5">
+                <img src="Images/undraw_revenue_kv38.png" width="100%" height="auto" style="border-radius: 15%; padding: 3em;">
             </div>
-            <div class="col-lg-6 d-flex justify-content-center align-items-center min-vh-100">
-                <img src="https://lh3.googleusercontent.com/pw/AP1GczPV3gmfajZp8IjyDJuIxGw6C6vcE1AoxQyJNfJitDjjO64HNStbRv5fwysHNBOkbAuuvjo4ibbNIhDLOcyRDn3MGQStjnh51Nn06x9x9rqA4WSVSEvOQqsayKf_53M7MrDt_yP3GFvCxeV6ep6D_lA9=w1203-h978-s-no-gm" style="width: 100%; height: auto; border-radius: 10%;">
+            <div class="col-lg-7" style="padding: 4em;">
+                <h1 style="font-size: 350%;">Your AI Companion for Smarter Summaries & Presentations </h1>
+                <br>
+                <p style="font-size: large;">At PPTXGen, we believe in making information more accessible and engaging. Our AI-powered tool transforms lengthy documents into concise summaries and professional presentations saving you time and effort. Whether you're a student, professional, or researcher, we streamline your workflow with intelligent automation.</p>
+                <br>
+                <div class="d-flex align-items-center" style="margin: auto;">
+                        <div style="margin-right: 1vw; padding: 0.8em 1.5em; background-color: rgba(0, 0, 0, 0.05);" class="rounded-pill">Try it now!</div>
+                        <div style="margin-left: 1vw;">Learn more ></div>
+                    </span>
             </div>
         </div>
     </div>
-    <div class="container">
-        <hr>
-    </div>
-    <div class="container text-center my-5 py-3">
-        <h2 class="fw-bold">Stay Updated with Our Latest Insights</h2>
-        <p class="lead">Navigate Easily</p>
-    </div>    
+    <div class="foot">
+        <div class="container text-center my-5 py-3">
+            <h2 class="fw-bold">Stay Updated with Our Latest Insights</h2>
+            <p class="lead">Navigate Easily</p>
+        </div>    
         <div class="container">
             <div class="row">
                 <div class="col-lg-3">
@@ -151,5 +151,6 @@
             </div>
         </div>
         <br>
+    </div>
 </body>
 </html>
